--- a/src/main/resources/templates/index/product-detail.html
+++ b/src/main/resources/templates/index/product-detail.html
@@ -53,7 +53,7 @@
 
             <!--  -->
             <div class="p-t-33">
-<!--              <form th:action="@{add-cart}" th:object="${cart}" method="POST">-->
+              <form th:action="@{/add-cart/{id}(id=${product.id})}" method="GET">
                 <div class="flex-w flex-r-m p-b-10">
                   <div class="size-204 flex-w flex-m respon6-next">
                     <div class="wrap-num-product flex-w m-r-20 m-tb-10">
@@ -61,19 +61,19 @@
                         <i class="fs-16 zmdi zmdi-minus"></i>
                       </div>
 
-                      <input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product" value="1">
+                      <input class="mtext-104 cl3 txt-center num-product" type="number" th:name="quantity" required>
 
                       <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
                         <i class="fs-16 zmdi zmdi-plus"></i>
                       </div>
                     </div>
 
-                    <button class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail">
+                    <button type="submit" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail">
                       Add to cart
                     </button>
                   </div>
                 </div>
-<!--              </form>-->
+              </form>
             </div>
 
             <!--  -->
