--- a/src/main/resources/templates/index/shopping-cart.html
+++ b/src/main/resources/templates/index/shopping-cart.html
@@ -39,21 +39,21 @@
                   <th class="column-5">Total</th>
                 </tr>
 
-                <tr class="table_row">
+                <tr class="table_row" th:each="cart : ${userApp.getCartList()}">
                   <td class="column-1">
                     <div class="how-itemcart1">
-                      <img th:src="@{images/catfood2.png}" alt="IMG">
+                      <img th:src="@{{imageUrl}(imageUrl=${cart.imageProduct})}" alt="IMG">
                     </div>
                   </td>
-                  <td class="column-2">WHISKAS® Makanan Kucing Kering Junior 1.1kg - Mackerel</td>
-                  <td class="column-3">Rp. 66,000</td>
+                  <td class="column-2" th:text="${cart.productName}"></td>
+                  <td class="column-3" th:text="${cart.subTotal}"></td>
                   <td class="column-4">
                     <div class="wrap-num-product flex-w m-l-auto m-r-0">
                       <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
                         <i class="fs-16 zmdi zmdi-minus"></i>
                       </div>
 
-                      <input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product1" value="1">
+                      <input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product1" th:value="${cart.quantity}">
 
                       <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
                         <i class="fs-16 zmdi zmdi-plus"></i>
