--- a/src/main/resources/static/css/signup/scss/style.scss
+++ b/src/main/resources/static/css/signup/scss/style.scss
@@ -92,7 +92,7 @@ h2 {
 		padding-left: 30px;
 		padding-right: 30px;
 	}
-	.forgot-pass {
+	.create-account {
 		position: relative;
 		top: 2px;
 		font-size: 14px;
