--- a/src/main/resources/templates/layout/landing-layout.html
+++ b/src/main/resources/templates/layout/landing-layout.html
@@ -38,10 +38,17 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
                 </div>
 
                 <div class="right-top-bar flex-w h-full">
+                    <th:block sec:authorize="isAnonymous()">
+                        <a th:href="@{/login}" class="flex-c-m trans-04 p-lr-25">
+                            Login
+                        </a>
+                    </th:block>
+                    <th:block sec:authorize="isAuthenticated()">
+                        <form th:action="@{/logout}" method="POST">
+                        <button type="submit" class="flex-c-m trans-04 p-lr-25 text-light">Logout</button>
+                        </form>
+                    </th:block>
 
-                    <a href="#" class="flex-c-m trans-04 p-lr-25">
-                        Login
-                    </a>
 
                 </div>
             </div>
@@ -69,14 +76,6 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
                         <li>
                             <a th:href="@{/shopping-cart}">Cart</a>
                         </li>
-
-                        <li>
-                            <a href="about.html">About</a>
-                        </li>
-
-                        <li>
-                            <a href="contact.html">Contact</a>
-                        </li>
                     </ul>
                 </div>
 
@@ -93,6 +92,11 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
                     <a sec:authorize="isAuthenticated()" th:href="@{/shopping-cart}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
                         <i class="zmdi zmdi-shopping-cart"></i>
                     </a>
+
+                    <a sec:authorize="hasAuthority('ROLE_SELLER')" th:href="@{/dashboard}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
+                        <i class="zmdi zmdi-view-dashboard"></i>
+                    </a>
+
 
                     <a sec:authorize="isAuthenticated()" th:href="@{/profile}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
                         <i class="zmdi zmdi-account"></i>
@@ -113,21 +117,28 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
         <!-- Icon header -->
         <div class="wrap-icon-header flex-w flex-r-m m-r-15">
-            <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search">
+            <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
                 <i class="zmdi zmdi-search"></i>
             </div>
 
-            <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="2">
-                <i class="zmdi zmdi-shopping-cart"></i>
+            <div sec:authorize="isAuthenticated()" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-cart">
+                <i class="zmdi zmdi-favorite-outline"></i>
             </div>
 
-            <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" data-notify="0">
-                <i class="zmdi zmdi-favorite-outline"></i>
+            <a sec:authorize="isAuthenticated()" th:href="@{/shopping-cart}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
+                <i class="zmdi zmdi-shopping-cart"></i>
             </a>
 
-            <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
-                <i class="zmdi zmdi-account"></i>
+            <a sec:authorize="hasAuthority('ROLE_SELLER')" th:href="@{/dashboard}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
+                <i class="zmdi zmdi-view-dashboard"></i>
             </a>
+
+
+            <a sec:authorize="isAuthenticated()" th:href="@{/profile}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
+                <i class="zmdi zmdi-account"></i>
+                <span class="stext-109 cl8 hov-cl1 trans-04" sec:authorize="isAuthenticated()">Welcome, <strong sec:authentication="principal.fullname"></strong></span>
+            </a>
+
         </div>
 
         <!-- Button show menu -->
@@ -239,7 +250,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
                     </div>
 
                     <div class="header-cart-item-txt p-t-8">
-                        <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04" th:text="${wishlist.productName}">
+                        <a th:href="@{/product-detail/{id}(id=${wishlist.productId})}" class="header-cart-item-name m-b-18 hov-cl1 trans-04" th:text="${wishlist.productName}">
                         </a>
 
                         <span class="header-cart-item-info">
@@ -261,7 +272,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <!-- Footer -->
 <footer class="bg3 p-t-75 p-b-32 mt-auto">
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center text-light">
            <h4>ANABUL SHOP & CARE</h4>
         </div>
 
