--- a/src/main/resources/templates/profile/user.html
+++ b/src/main/resources/templates/profile/user.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/landing-layout}"
 >
 <head>
   <meta charset="UTF-8">
@@ -10,6 +12,65 @@
   <title>Title</title>
 </head>
 <body>
-<h1 th:text="${userApp.firstName}"></h1>
+
+<div layout:fragment="content">
+<!-- breadcrumb -->
+<div class="container">
+  <div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
+    <a th:href="@{/}" class="stext-109 cl8 hov-cl1 trans-04">
+      Home
+      <i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+    </a>
+
+    <span class="stext-109 cl4">
+				User Profile
+			</span>
+  </div>
+</div>
+
+  <!-- History Cart -->
+  <form class="bg0 p-t-75 p-b-85">
+    <div class="container">
+      <div class="row my-3 m-lr-auto">
+        <img th:src="@{{imageUrl}(imageUrl=${userApp.avatars})}" class="w-20" alt="IMG">
+      </div>
+      <div class="row my-3 m-lr-auto">
+        <span class="h4">First Name : <span th:text="${userApp.firstName}"></span></span>
+      </div>
+      <div class="row my-3 m-lr-auto">
+        <span class="h4">Last Name : <span th:text="${userApp.lastName}"></span></span>
+      </div>
+      <div class="row my-3 m-lr-auto">
+        <div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
+          <div class="m-l-25 m-r--38 m-lr-0-xl">
+            <div class="wrap-table-shopping-cart">
+              <table class="table-shopping-cart">
+                <tr class="table_head">
+                  <th class="column-1">Product</th>
+                  <th class="column-2"></th>
+                  <th class="column-3">Price</th>
+                  <th class="column-4">Quantity</th>
+                  <th class="column-5">Total</th>
+                </tr>
+
+                <tr class="table_row" th:each="cart : ${userApp.getCartList()}">
+                  <td class="column-1">
+                    <div class="how-itemcart1">
+                      <img th:src="@{{imageUrl}(imageUrl=${cart.imageProduct})}" alt="IMG">
+                    </div>
+                  </td>
+                  <td class="column-2" th:text="${cart.productName}"></td>
+                  <td class="column-3"> <span>Rp. <span th:text="${#numbers.formatDecimal(cart.price,  0, 'COMMA', 0, 'POINT')}"></span></span></td>
+                  <td class="column-4 text-center" th:text="${cart.quantity}"></td>
+                  <td class="column-5"> <span>Rp. <span th:text="${#numbers.formatDecimal(cart.subTotal,  0, 'COMMA', 0, 'POINT')}"></span></span></td>
+                </tr>
+              </table>
+            </div>
+           </div>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
 </body>
 </html>
