--- a/src/main/resources/templates/layout/landing-layout.html
+++ b/src/main/resources/templates/layout/landing-layout.html
@@ -44,7 +44,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
                         </a>
                     </th:block>
                     <th:block sec:authorize="isAuthenticated()">
-                        <form th:action="@{/logout}" method="POST">
+                        <form th:action="@{/logout}" method="GET">
                         <button type="submit" class="flex-c-m trans-04 p-lr-25 text-light">Logout</button>
                         </form>
                     </th:block>
