--- a/src/main/resources/templates/signup/signup-seller.html
+++ b/src/main/resources/templates/signup/signup-seller.html
@@ -64,7 +64,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label" for="firstName"
-                                    >First Name</label
+                                    >Store Name</label
                                     >
                                     <input
                                             class="form-control"
@@ -74,7 +74,7 @@
                                     />
                                 </div>
                                 <div class="mb-3">
-                                    <label class="form-label" for="lastName">Last Name</label>
+                                    <label class="form-label" for="lastName">Seller Name</label>
                                     <input
                                             class="form-control"
                                             id="lastName"
