--- a/src/main/resources/templates/index/shopping-cart.html
+++ b/src/main/resources/templates/index/shopping-cart.html
@@ -24,7 +24,7 @@
 
 
   <!-- Shoping Cart -->
-  <form class="bg0 p-t-75 p-b-85">
+  <form class="bg0 p-t-75 p-b-85" th:action="@{/checkout}" th:object="${checkoutRequest}" method="POST" >
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
@@ -52,20 +52,6 @@
                 </tr>
               </table>
             </div>
-
-            <div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
-              <div class="flex-w flex-m m-r-20 m-tb-5">
-                <input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="text" name="coupon" placeholder="Coupon Code">
-
-                <div class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5">
-                  Check coupon
-                </div>
-              </div>
-
-              <div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
-                Proceed Checkout
-              </div>
-            </div>
           </div>
         </div>
 
@@ -83,8 +69,7 @@
               </div>
 
               <div class="size-209">
-								<span class="mtext-110 cl2">
-									Rp. 66,000
+								<span class="mtext-110 cl2">Rp. <span th:text="${#numbers.formatDecimal(subTotal,  0, 'COMMA', 0, 'POINT')}"></span>
 								</span>
               </div>
             </div>
@@ -97,10 +82,22 @@
               </div>
 
               <div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
-                <p class="stext-111 cl6 p-t-2">
-                  KOTA YOGYAKARTA
+                <span class="stext-111 cl6 p-t-2"> Rp. <span th:text="${#numbers.formatDecimal(priceShipment,  0, 'COMMA', 0, 'POINT')}"></span>
+                </span>
+                <p class="stext-111 cl6 p-t-2" th:text="${userApp.address}">
                 </p>
+              </div>
+            </div>
 
+            <div class="flex-w flex-t bor12 p-t-15 p-b-30">
+              <div class="size-208 w-full-ssm">
+								<span class="stext-110 cl2">
+									Coupon:
+								</span>
+              </div>
+
+              <div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
+                  <input type="text" th:field="*{couponCode}" placeholder="Add Coupon">
               </div>
             </div>
 
@@ -113,14 +110,30 @@
 
               <div class="size-209 p-t-1">
 								<span class="mtext-110 cl2">
-									Rp. 66,000
+									Rp. <span th:text="${#numbers.formatDecimal(total,  0, 'COMMA', 0, 'POINT')}"></span>
 								</span>
               </div>
             </div>
 
-            <button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
-              Proceed to Checkout
-            </button>
+            <div class="flex-w flex-t bor12 p-t-15 p-b-30">
+              <div class="size-208 w-full-ssm">
+								<span class="stext-110 cl2">
+									Payment:
+								</span>
+              </div>
+              <div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
+
+                  <select class="form-select" id="inputGroupSelect01" th:field="*{bankName}" aria-describedby="imagesHelp">
+                            <span th:each="gateway : ${payment}">
+                                <option th:value="${gateway.bankName}"><span th:text="${gateway.bankName}"></span></option>
+                            </span>
+                  </select>
+
+                </div>
+              </div>
+                  <button type="submit" class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
+                    Proceed to Checkout
+                  </button>
           </div>
         </div>
       </div>
