--- a/src/main/resources/templates/layout/landing-layout.html
+++ b/src/main/resources/templates/layout/landing-layout.html
@@ -65,7 +65,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
                 <!-- Menu desktop -->
                 <div class="menu-desktop">
                     <ul class="main-menu">
-                        <li class="active-menu">
+                        <li>
                             <a th:href="@{/}">Home</a>
                         </li>
 
@@ -75,6 +75,9 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
                         <li>
                             <a th:href="@{/shopping-cart}">Cart</a>
+                        </li>
+                        <li>
+                            <a th:href="@{/checkout/list}" sec:authorize="isAuthenticated()">Transaction</a>
                         </li>
                     </ul>
                 </div>
