--- a/src/main/resources/templates/signin/signin.html
+++ b/src/main/resources/templates/signin/signin.html
@@ -26,7 +26,7 @@
 
 	<!-- Style -->
 	<link rel="stylesheet" th:href="@{/css/signup/style.css}" />
-	<title>Register</title>
+	<title>Login</title>
 </head>
 <body>
 <div layout:fragment="content">
@@ -36,7 +36,7 @@
 				<div class="form-block mx-auto">
 					<div class="text-center mb-5">
 						<h3 class="text-uppercase">
-							Register to <strong>Anabul Shop & Care</strong>
+							Login to <strong>Anabul Shop & Care</strong>
 						</h3>
 					</div>
 					<form
