--- a/src/main/resources/templates/signup/signup-seller.html
+++ b/src/main/resources/templates/signup/signup-seller.html
@@ -36,7 +36,7 @@
                         <div class="form-block mx-auto">
                             <div class="text-center mb-5">
                                 <h3 class="text-uppercase">
-                                    Register to <strong>Anabul Shop & Care</strong>
+                                    Become a seller <strong>Anabul Shop & Care</strong>
                                 </h3>
                             </div>
                             <form
