--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -62,7 +62,7 @@
             <div class="w-100 mb-4 d-flex">
                 <a
                         class="navbar-brand mx-auto mt-2 flex-fill text-center"
-                        th:href="@{/dashboard}"
+                        th:href="@{/}"
 
                 >
                     <img th:src="@{/images/logo-cat.png}" class="img-fluid img-circle w-25" alt="">
